5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/225/users/4007/executions/1712_2496.log
== TEST (2019-05-07 13:26:16) 
-- CODE:
num = int(input("digite um numero: "))
while (num + 1):
	num = int(input("digite um numero: "))
	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 13:26:29) 
-- CODE:
num = int(input("digite um numero: "))
while (num + 1):
	num = int(input("digite um numero: "))
	
-- OUTPUT:
PAR
PAR
PAR
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 13:27:44) 
-- CODE:
num = int(input("digite um numero: "))
while (num + 1):
	num = int(input("digite um numero: "))
	if (num != -1):	
	print(num + num)
-- ERROR:
File "XXXX", line 5
    print(num + num)
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 13:28:01) 
-- CODE:
num = int(input("digite um numero: "))
while (num + 1):
	num = int(input("digite um numero: "))
	if (num != -1):	
	
-- ERROR:
File "XXXX", line 6
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 13:28:07) 
-- CODE:
num = int(input("digite um numero: "))
while (num + 1):
	num = int(input("digite um numero: "))
	if (num != -1):
-- ERROR:
File "XXXX", line 5
    
                    ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 13:28:15) 
-- CODE:
num = int(input("digite um numero: "))
while (num + 1):
	num = int(input("digite um numero: "))
	if (num != -1):
		print(num)
-- OUTPUT:
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-07 13:28:34) 
-- CODE:
comt = 0
soma = 0
num = int(input("digite um numero: "))
while (num + 1):
	num = int(input("digite um numero: "))
	if (num != -1):
		print(num)
-- OUTPUT:
1075
333
-9
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:34:42) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + nota
	cont = cont + 1
	nota = float(input("digite um numero: "))
	if (num == -1):
		print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = soma + nota
NameError: name 'nota' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:34:58) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	cont = cont + 1
	nota = float(input("digite um numero: "))
	if (num == -1):
		print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    nota = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:36:59) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	cont = cont + 1
	nota = float(input("digite um numero: "))
	if (num == -1):
		print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    nota = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:37:10) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	cont = cont + 1
	nota = float(input("digite um numero: "))
	if (num == -1):
		print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    nota = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:37:12) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	cont = cont + 1
	nota = float(input("digite um numero: "))
	if (num == -1):
		print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    nota = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:37:15) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	cont = cont + 1
	nota = float(input("digite um numero: "))
	if (num == -1):
		print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    nota = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:37:21) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	cont = cont + 1
	nota = float(input("digite um numero: "))
	if (num == -1):
		print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    nota = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:37:30) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	cont = cont + 1
	nota = float(input("digite um numero: "))
	if (num == -1):
		print(soma)
-- EXECUTION TIME:
0.889594
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2496/main.py", line 7, in <module>
    nota = float(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:37:37) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	cont = cont + 1
	nota = float(input("digite um numero: "))
	if (num == -1):
		print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    nota = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:37:40) 
-- CODE:
cont = 0
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	cont = cont + 1
	nota = float(input("digite um numero: "))
	if (num == -1):
		print(soma)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 7, in <module>
    nota = float(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:49) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:39:53) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:40:01) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:40:02) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:40:03) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:40:03) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:40:03) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:40:34) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:46:13) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero"))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:46:27) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero: "))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:46:36) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero: "))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:46:39) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero: "))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:46:44) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero: "))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:47:58) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero: "))
if print(soma):

-- ERROR:
File "XXXX", line 7
    
                   ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:48:11) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero: "))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:48:17) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero: "))
print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:48:32) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero: "))
else:
	print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:48:47) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	soma = int(input("digite um numero: "))
else:
	print(soma)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:49:26) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = int(input("digite um numero: "))
	soma = soma + 1
print(soma)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:49:35) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = int(input("digite um numero: "))
	soma = soma + 1
print(soma)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:51:43) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = int(input("digite um numero: "))
	num= soma + 1
print(soma)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    soma = int(input())
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:51:51) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = int(input("digite um numero: "))
	num= soma + 1
print(soma)
	


-- EXECUTION TIME:
0.134126
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1712/2496/main.py", line 4, in <module>
    soma = int(input())
EOFError: EOF when reading a line

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:52:28) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma= num + 1
	num = int(input("digite um numero: "))
	
print(soma)
	


-- OUTPUT:
-8
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:52:39) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma= num + 1
	num = int(input("digite um numero: "))
	
print(soma)
	


-- EXECUTION TIME:
0.13639
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
-8
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
1
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
-10952
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:03) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	num = int(input("digite um numero: "))
	
print(soma)
	


-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:11) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	num = int(input("digite um numero: "))
	
print(soma)
	


-- OUTPUT:
4
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:45) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	num = int(input("digite um numero: "))
	
print(num)
	


-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:45) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	num = int(input("digite um numero: "))
	
print(num)
	


-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:45) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	num = int(input("digite um numero: "))
print(num)
	


-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:46) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	num = int(input("digite um numero: "))
	
print(num)
	


-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:53:47) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	num = int(input("digite um numero: "))
	
print(num)
	


-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:54:04) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + 1
	num = int(input("digite um numero: "))
print(num)
	


-- OUTPUT:
-1
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-08 14:54:10) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	num = int(input("digite um numero: "))
print(soma)
	


-- OUTPUT:
874
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-08 14:54:30) 
-- CODE:
soma = 0
num = int(input("digite um numero: "))
while (num != -1):
	soma = soma + num
	num = int(input("digite um numero: "))
print(soma)
	


-- EXECUTION TIME:
0.117907
-- TEST CASE 1:
---- input:
-525
1075
333
-9
-1

---- correct output:
874
---- user output:
874
-- TEST CASE 2:
---- input:
0
0
0
0
0
0
0
-1
---- correct output:
0
---- user output:
0
-- TEST CASE 3:
---- input:
10953
32653
-10953
-1
---- correct output:
32653
---- user output:
32653
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
